--- a/skins/default/mail.css
+++ b/skins/default/mail.css
@@ -221,7 +221,7 @@
 {
   white-space: nowrap;
   position: absolute;
-  right: 190px;
+  right: 198px;
   vertical-align: middle;
 }
 
